@@ -1,4 +1,6 @@
 Changes in quota-tools from 3.12 to 3.13
+* volume label and UUID support for reiserfs (Jan Kara)
+* support for LABEL= and UUID= on a command line (Jan Kara)
 * parse NFSD export table to find pseudofilesystem root for NFSv4 (Jan Kara)
 * handle better when quota file should become empty (Niu YaWei)
 * minor manpage and help-text fixes (Jan Kara)
